--- a/babynophone.App/babynophone.App.UWP/App.xaml
+++ b/babynophone.App/babynophone.App.UWP/App.xaml
@@ -1,5 +1,5 @@
 ﻿<Application
-    x:Class="babynophone.App.UWP.App"
+    x:Class="babynophone.App.UWP.UWPApplication"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:babynophone.App.UWP"
